tests/NormalTests/paczka1/fuzzy1/88721347.err
Error in line 9: QIa2ydqIKR A598 58,9
Error in line 6: My9B A696 48,0
Error in line 23: OwepbwJcHfL A598 96,4
Error in line 28: My9B S278 52,4
Error in line 34: A598 S415 67,7
